--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <link rel="icon" href="logo.png">
-      <meta name="viewport" content="widt=device-width, initial-scale=1.0">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>JuanTrip Travel PH</title>
       <link rel="stylesheet" href="style.css">
       <link rel="stylesheet" href="">
